--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: build/libs/*.jar  # فایل JAR که می‌خواهید منتشر کنید
+        env:
+            GITHUB_TOKEN: ${{ secrets.TOKEN }
