--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           files: build/libs/*.jar  # فایل JAR که می‌خواهید منتشر کنید
         env:
-            GITHUB_TOKEN: ${ secrets.TOKEN }
+            GITHUB_TOKEN: ${ secrets.GITHUB_TOKEN }
