push from github

--- a/.github/workflows/publishJar.yml
+++ b/.github/workflows/publishJar.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 21
         uses: actions/setup-java@v4
@@ -37,6 +37,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Deploy JAR to Server
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh -o StrictHostKeyChecking=no root@107.175.73.102 "mkdir -p /root/deploy"
+          scp -o StrictHostKeyChecking=no baran-all.jar root@107.175.73.102:/root/deploy/
 
       - name: Download JAR artifact
         uses: actions/download-artifact@v4
