--- a/.github/workflows/publishJar.yml
+++ b/.github/workflows/publishJar.yml
@@ -46,7 +46,7 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh -o StrictHostKeyChecking=no root@107.175.73.102 "mkdir -p /root/deploy"
-          scp -o StrictHostKeyChecking=no baran-all.jar root@107.175.73.102:/root/deploy/
+          scp -o StrictHostKeyChecking=no build/libs/baran-all.jar root@107.175.73.102:/root/deploy/
 
       - name: Download JAR artifact
         uses: actions/download-artifact@v4
